--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/layout/layout_site.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/layout/layout_site.html.twig
@@ -1,3 +1,10 @@
+{% if (settingRow['template_style'] == 1) %}
+    {% set templateStyleColumnCenter = "8" %}
+{% elseif (settingRow['template_style'] == 2 or settingRow['template_style'] == 3) %}
+    {% set templateStyleColumnCenter = "10" %}
+{% elseif (settingRow['template_style'] == 4) %}
+    {% set templateStyleColumnCenter = "12" %}
+{% endif %}
 <!DOCTYPE html>
 <html lang="{{app.request.getLocale()}}">
     <head>
@@ -14,15 +21,19 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-2 display_desktop">
-                    {% block columnLeftContainer %}{% endblock %}
-                </div>
-                <div class="col-md-8">
+                {% if (settingRow['template_style'] == 1 or settingRow['template_style'] == 2) %}
+                    <div class="col-md-2 display_desktop">
+                        {% block columnLeftContainer %}{% endblock %}
+                    </div>
+                {% endif %}
+                <div class="col-md-{{templateStyleColumnCenter}}">
                     {% block columnCenterContainer %}{% endblock %}
                 </div>
-                <div class="col-md-2 display_desktop">
-                    {% block columnRightContainer %}{% endblock %}
-                </div>
+                {% if (settingRow['template_style'] == 1 or settingRow['template_style'] == 3) %}
+                    <div class="col-md-2 display_desktop">
+                        {% block columnRightContainer %}{% endblock %}
+                    </div>
+                {% endif %}
             </div>
         </div>
         <footer class="footer_fix">
