--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/table_1.0.0.scss
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/table_1.0.0.scss
@@ -1,6 +1,6 @@
 @import "utility_1.0.0.scss";
 
-@media(min-width: $minWidth) {
+@media(min-width: $widthDesktop) {
     .search_input {
         width: 30%;
     }
