--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/module/search.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/module/search.html.twig
@@ -1,1 +1,3 @@
-<div class="display_desktop">{{-render(controller("UebusaitoBundle:Search:module", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}</div>
+<div class="display_desktop">
+    {{-render(controller("UebusaitoBundle:Search:module", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
+</div>
