--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/basic.css
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/basic.css
@@ -132,10 +132,18 @@ legend { width: inherit; padding: 0 10px; border-bottom: none; }
   .navbar_fix .navbar-default .navbar-collapse .navbar-nav li { float: none; }
   .navbar_fix .navbar-default .navbar-collapse .navbar-nav li a { padding-top: 10px; padding-bottom: 10px; }
   .navbar_fix .navbar-default .navbar-collapse .navbar-nav li.dropdown ul.dropdown-menu { position: static; float: none; border: initial !important; border-top: 1px solid #e7e7e7 !important; -webkit-box-shadow: none !important; -moz-box-shadow: none !important; -ms-filter: none !important; filter: none !important; box-shadow: none !important; }
-  .title_big { font-size: 30px; }
+  .maintenance_content { margin: 0px 10px 20px 10px; }
+  .maintenance_content img { width: 100%; }
+  .maintenance_content a { top: 8%; left: 18%; font-size: 20px; }
+  .maintenance_content p.text_1 { top: 36%; left: 28%; font-size: 15px; }
+  .maintenance_content p.text_2 { top: 46%; left: 26%; font-size: 15px; }
   #panel_id_1 { margin-left: -15px; margin-right: -15px; } }
-@media (min-width: 1051px) { .title_big { font-size: 100px; }
-  .button_authentication_desktop { display: none; position: absolute; top: 27px; right: 35px; color: #ffffff; cursor: pointer; z-index: 1010; }
+@media (min-width: 1051px) { .button_authentication_desktop { display: none; position: absolute; top: 27px; right: 35px; color: #ffffff; cursor: pointer; z-index: 1010; }
+  .maintenance_content { margin: -20px 10px 20px 10px; }
+  .maintenance_content img { width: 55%; }
+  .maintenance_content a { top: 9%; left: 32%; font-size: 35px; }
+  .maintenance_content p.text_1 { top: 38%; left: 38%; font-size: 32px; }
+  .maintenance_content p.text_2 { top: 45%; left: 36%; font-size: 35px; }
   #panel_id_4 { position: absolute; top: 31px; right: 40px; z-index: 1010; }
   #panel_id_5 { position: absolute; top: 31px; right: 195px; z-index: 1010; } }
 body { position: absolute; top: 0; right: 0; left: 0; min-height: 100%; font-family: "pt_sans", sans-serif; font-size: 14px; }
@@ -223,7 +231,14 @@ p { margin: 0; }
 
 .avatar { max-width: 150px; max-height: 150px; }
 
-.authentication_maintenance { display: block !important; position: initial !important; width: 320px !important; margin: auto !important; -webkit-box-shadow: 0px 5px 5px #474747; -moz-box-shadow: 0px 5px 5px #474747; -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')" !important; filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')" !important; box-shadow: 0px 5px 5px #474747; }
+.maintenance_authentication { display: block !important; position: initial !important; width: 320px !important; margin: auto !important; -webkit-box-shadow: 0px 5px 5px #474747; -moz-box-shadow: 0px 5px 5px #474747; -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')" !important; filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')" !important; box-shadow: 0px 5px 5px #474747; }
+
+.maintenance_content { position: relative; text-align: center; }
+.maintenance_content img { height: auto; }
+.maintenance_content a { position: absolute; }
+.maintenance_content p { position: absolute; }
+
+.error_title { font-size: 100px; }
 
 .footer_fix { position: absolute; bottom: 0; width: 100%; height: 120px; background-color: #2f343a; text-align: center; color: #ffffff; }
 
