--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/module/language_text.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/module/language_text.html.twig
@@ -1,3 +1,3 @@
-<div class="display_desktop">
+<div class="display_desktop settings_hide">
     {{-render(controller("UebusaitoBundle:Language:text", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
 </div>
