--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/search.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/search.html.twig
@@ -1,6 +1,6 @@
 <div id="search_render">
-    {{-include("@UebusaitoBundleViews/include/table.html.twig")-}}
+    {{-include("@UebusaitoBundleViews/include/table_and_pagination.html.twig")-}}
     
-    <p class="text">{% trans %}search_render_1{% endtrans %} {{response.values.results|length}}</p>
+    <p class="text">{% trans %}search_render_1{% endtrans %} {{response.values.countResults}}</p>
     {{response.values.list|raw}}
 </div>
