--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/loader.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/loader.html.twig
@@ -1,4 +1,4 @@
 <div id="loader">
-    <p class="text">{% trans %}loading_1{% endtrans %}</p>
-    <img class="image" src="{{asset("bundles/uebusaito/images/templates/" ~ settingRow['template'] ~ "/loading.gif")}}" alt="loading.gif"/>
+    <p class="text">{% trans %}loader_1{% endtrans %}</p>
+    <img class="image" src="{{asset("bundles/uebusaito/images/templates/" ~ settingRow['template'] ~ "/loader_loading.gif")}}" alt="loading.gif"/>
 </div>
