--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/upload.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/upload.html.twig
@@ -24,11 +24,11 @@
 </div>
 <script type="text/javascript">
     var textUpload = {
-        'uploadText_1': "{{"upload_3"|trans}}",
-        'uploadText_2': "{{"upload_4"|trans}}",
-        'uploadText_3': "{{"upload_5"|trans}}",
-        'uploadButton_1': "{{"upload_6"|trans}}",
-        'uploadButton_2': "{{"upload_7"|trans}}",
-        'uploadButton_3': "{{"upload_8"|trans}}"
+        'label_1': "{{"upload_3"|trans}}",
+        'label_2': "{{"upload_4"|trans}}",
+        'label_3': "{{"upload_5"|trans}}",
+        'label_4': "{{"upload_6"|trans}}",
+        'label_5': "{{"upload_7"|trans}}",
+        'label_6': "{{"upload_8"|trans}}"
     };
 </script>
