--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel.html.twig
@@ -125,31 +125,31 @@
 </div>
 <script type="text/javascript">
     var textPayment = {
-        'deletePayment': "{{"control_panel_15"|trans}}",
-        'deleteAllPayments': "{{"control_panel_16"|trans}}"
+        'label_1': "{{"control_panel_15"|trans}}",
+        'label_2': "{{"control_panel_16"|trans}}"
     };
     
     var textPage = {
-        'deletePage': "{{"control_panel_17"|trans}}",
-        'deleteAllPages': "{{"control_panel_18"|trans}}"
+        'label_1': "{{"control_panel_17"|trans}}",
+        'label_2': "{{"control_panel_18"|trans}}"
     };
     
     var textUser = {
-        'deleteUser': "{{"control_panel_19"|trans}}",
-        'deleteAllUsers': "{{"control_panel_20"|trans}}"
+        'label_1': "{{"control_panel_19"|trans}}",
+        'label_2': "{{"control_panel_20"|trans}}"
     };
     
     var textModule = {
-        'deleteModule': "{{"control_panel_21"|trans}}",
-        'deleteAllModules': "{{"control_panel_22"|trans}}"
+        'label_1': "{{"control_panel_21"|trans}}",
+        'label_2': "{{"control_panel_22"|trans}}"
     };
     
     var textRole = {
-        'deleteRole': "{{"control_panel_23"|trans}}",
-        'deleteAllRoles': "{{"control_panel_24"|trans}}"
+        'label_1': "{{"control_panel_23"|trans}}",
+        'label_2': "{{"control_panel_24"|trans}}"
     };
     
     var textSetting = {
-        'deleteLanguageManage': "{{"control_panel_25"|trans}}"
+        'label_1': "{{"control_panel_25"|trans}}"
     };
 </script>
