--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/language_page.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/module/language_page.html.twig
@@ -16,6 +16,6 @@
 </div>
 <script type="text/javascript">
     var textLanguagePage = {
-        'changePageLanguage': "{{"language_page_1"|trans}}"
+        'label_1': "{{"language_page_1"|trans}}"
     };
 </script>
