--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/wysiwyg.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/wysiwyg.html.twig
@@ -178,22 +178,22 @@
         
 <script type="text/javascript">
     var textWysiwyg = {
-        'link_1': "{{"wysiwyg_1"|trans}}",
-        'link_2': "{{"wysiwyg_2"|trans}}",
-        'link_3': "{{"wysiwyg_3"|trans}}",
-        'image_1': "{{"wysiwyg_4"|trans}}",
-        'image_2': "{{"wysiwyg_5"|trans}}",
-        'image_3': "{{"wysiwyg_6"|trans}}",
-        'image_4': "{{"wysiwyg_7"|trans}}",
-        'image_5': "{{"wysiwyg_8"|trans}}",
-        'button_1': "{{"wysiwyg_9"|trans}}",
-        'button_2': "{{"wysiwyg_10"|trans}}",
-        'button_3': "{{"wysiwyg_11"|trans}}",
-        'button_4': "{{"wysiwyg_12"|trans}}",
-        'button_5': "{{"wysiwyg_13"|trans}}",
-        'table_1': "{{"wysiwyg_14"|trans}}",
-        'table_2': "{{"wysiwyg_15"|trans}}",
-        'table_3': "{{"wysiwyg_16"|trans}}",
-        'table_4': "{{"wysiwyg_17"|trans}}"
+        'label_1': "{{"wysiwyg_1"|trans}}",
+        'label_2': "{{"wysiwyg_2"|trans}}",
+        'label_3': "{{"wysiwyg_3"|trans}}",
+        'label_4': "{{"wysiwyg_4"|trans}}",
+        'label_5': "{{"wysiwyg_5"|trans}}",
+        'label_6': "{{"wysiwyg_6"|trans}}",
+        'label_7': "{{"wysiwyg_7"|trans}}",
+        'label_8': "{{"wysiwyg_8"|trans}}",
+        'label_9': "{{"wysiwyg_9"|trans}}",
+        'label_10': "{{"wysiwyg_10"|trans}}",
+        'label_11': "{{"wysiwyg_11"|trans}}",
+        'label_12': "{{"wysiwyg_12"|trans}}",
+        'label_13': "{{"wysiwyg_13"|trans}}",
+        'label_14': "{{"wysiwyg_14"|trans}}",
+        'label_15': "{{"wysiwyg_15"|trans}}",
+        'label_16': "{{"wysiwyg_16"|trans}}",
+        'label_17': "{{"wysiwyg_17"|trans}}"
     };
 </script>
